# azure_agent_simple

./: .env.example  .gitignore  AZURE_ML_SETUP.md  Eda Karatekin.md  MULTI_AGENT_SETUP.md  README.md  demo.ipynb  pyproject.toml
scripts/: ingest.py  run.py
src/: config.py  db.py  tools.py
src/agents/: critic.py  investigator.py  team.py  writer.py
